[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]

[node name="UI" type="Control"]
margin_left = 10.0
margin_top = 10.0
margin_right = 483.0
margin_bottom = 358.0
rect_clip_content = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 21.0
color = Color( 1, 1, 1, 0.121569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer"]
margin_left = 433.0
margin_right = 453.0
margin_bottom = 20.0
size_flags_horizontal = 8

[node name="X" type="Button" parent="ColorRect/VBoxContainer/XContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 20.0
margin_bottom = 20.0
text = "X"

[node name="LperTick" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 24.0
margin_right = 453.0
margin_bottom = 38.0
text = "Lambdas per tick (speeds up drawing but fries CPU):"

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 42.0
margin_right = 453.0
margin_bottom = 58.0

[node name="LperTickSlider" type="HSlider" parent="ColorRect/VBoxContainer/HBoxContainer3"]
margin_right = 409.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 100.0
value = 100.0

[node name="LperTickvalue" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer3"]
margin_left = 413.0
margin_top = 1.0
margin_right = 453.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )
text = "100"

[node name="XperTick" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 62.0
margin_right = 453.0
margin_bottom = 76.0
text = "Generations per lambda (more detail, more fried CPU):"

[node name="HBoxContainer4" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 80.0
margin_right = 453.0
margin_bottom = 96.0

[node name="XperTickSlider" type="HSlider" parent="ColorRect/VBoxContainer/HBoxContainer4"]
margin_right = 409.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 500.0
value = 500.0

[node name="XperTickvalue" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer4"]
margin_left = 413.0
margin_top = 1.0
margin_right = 453.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )
text = "500"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 100.0
margin_right = 453.0
margin_bottom = 114.0
text = "Horizontal Resolution (total lambdas calculated)"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 118.0
margin_right = 453.0
margin_bottom = 134.0

[node name="HResSlider" type="HSlider" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_right = 409.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 10.0
max_value = 10000.0
value = 10000.0

[node name="HresValue" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 413.0
margin_top = 1.0
margin_right = 453.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )
text = "10000"

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 138.0
margin_right = 453.0
margin_bottom = 152.0
text = "Vertical Resolution (Decimal place accuracy)"

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 156.0
margin_right = 453.0
margin_bottom = 172.0

[node name="VResSlider" type="HSlider" parent="ColorRect/VBoxContainer/HBoxContainer2"]
margin_right = 409.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 10.0
max_value = 10000.0
value = 10000.0

[node name="VResValue" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer2"]
margin_left = 413.0
margin_top = 1.0
margin_right = 453.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )
text = "10000"

[node name="Label3" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 176.0
margin_right = 453.0
margin_bottom = 190.0
text = "Minimum Lambda:"

[node name="HBoxContainer7" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 194.0
margin_right = 453.0
margin_bottom = 210.0

[node name="min_lam_slider" type="HSlider" parent="ColorRect/VBoxContainer/HBoxContainer7"]
margin_right = 409.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 3.99
step = 0.01
value = 1.0

[node name="min_lam_value" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer7"]
margin_left = 413.0
margin_top = 1.0
margin_right = 453.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )
text = "1"

[node name="Label4" type="Label" parent="ColorRect/VBoxContainer"]
margin_top = 214.0
margin_right = 453.0
margin_bottom = 228.0
text = "Maximum Lambda:"

[node name="HBoxContainer8" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 232.0
margin_right = 453.0
margin_bottom = 248.0

[node name="max_lam_slider" type="HSlider" parent="ColorRect/VBoxContainer/HBoxContainer8"]
margin_right = 409.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.01
max_value = 4.0
step = 0.01
value = 4.0

[node name="max_lam_value" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer8"]
margin_left = 413.0
margin_top = 1.0
margin_right = 453.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )
text = "4"

[node name="HBoxContainer6" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 252.0
margin_right = 453.0
margin_bottom = 292.0

[node name="CheckButton" type="CheckButton" parent="ColorRect/VBoxContainer/HBoxContainer6"]
margin_right = 207.0
margin_bottom = 40.0
pressed = true
text = "Colored Branchings:"

[node name="HBoxContainer5" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 296.0
margin_right = 453.0
margin_bottom = 336.0
custom_constants/separation = 20
alignment = 1

[node name="REDRAW" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer5"]
margin_left = 80.0
margin_right = 196.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "REDRAW! (Enter)"

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer5"]
margin_left = 216.0
margin_top = 13.0
margin_right = 229.0
margin_bottom = 27.0
text = "or"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SAVE" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer5"]
margin_left = 249.0
margin_right = 372.0
margin_bottom = 40.0
disabled = true
text = "Save plot as JSON"

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
access = 2
filters = PoolStringArray( "\".json ; JSON Files\"" )
current_dir = "/Users/49152/Documents/Godot/logistic map"
current_path = "/Users/49152/Documents/Godot/logistic map/"
[connection signal="pressed" from="ColorRect/VBoxContainer/XContainer/X" to="." method="_on_X_pressed"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/HBoxContainer3/LperTickSlider" to="." method="_on_LperTickSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/HBoxContainer4/XperTickSlider" to="." method="_on_XperTickSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/HBoxContainer/HResSlider" to="." method="_on_HResSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/HBoxContainer2/VResSlider" to="." method="_on_VResSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/HBoxContainer7/min_lam_slider" to="." method="_on_min_lam_slider_value_changed"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/HBoxContainer8/max_lam_slider" to="." method="_on_max_lam_slider_value_changed"]
[connection signal="toggled" from="ColorRect/VBoxContainer/HBoxContainer6/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer5/REDRAW" to="." method="_on_REDRAW_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer5/SAVE" to="." method="_on_SAVE_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
